--- a/resolution.tex
+++ b/resolution.tex
@@ -144,11 +144,11 @@ The large increase in magnitude of the upward and downward vertical velocities w
 \label{fig:corr}
 \end{figure}
 
-To further understand this relationship, a logistic regression between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ is performed for each grid column within each of the simulations. Logistic regression uses an iterative method to fit a continuous variable predictor, $x$ to a binary predictand $p$ through the exponential \citep{WILKSBOOK},
+To further understand this relationship, a logistic regression between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ is performed for each grid column within each of the simulations. Logistic regression uses an iterative method to fit a continuous variable predictor, $x$ to a binary predictand $p$ using the exponential \citep{WILKSBOOK},
 \begin{equation}
 p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:eq6-3}
 \end{equation}
-where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is then the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which the authors believe is reasonable since the environment of subsiding regions is generally more stable than its surroundings, and the ZM scheme is modulated by a stability calculation, dilute CAPE. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
+where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which the authors believe is reasonable since the environment of subsiding regions is generally more stable than its surroundings, and the ZM scheme is modulated by a stability calculation, dilute CAPE. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
 
 \begin{figure}
 \begin{center}
@@ -160,10 +160,10 @@ where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor
 
 The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. In this region, the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion stabilizes the environment and actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
 
-Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) from convective to stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where convective precipitation rates increase in the $ne30$ run due to an extremely wide double-ITCZ in the $ne20$ run that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occurs in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
+Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) from convective to stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where convective precipitation rates increase due to a wide double-ITCZ in the $ne20$ run that spans well outside of $\pm 10^{\circ}$ latitude, but which is contained within $\pm 10^{\circ}$ latitude in the $ne30$ run). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occurs in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
 
  \begin{table}
- \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc..., and computed through remapping all data to the $ne20$ grid.}
+ \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc... All differences are computed after remapping the data to the $ne20$ grid.}
  \centering
  \scriptsize
  \begin{tabular}{lcccccc}
@@ -182,9 +182,9 @@ Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to 
  \label{tbl:table2}
  \end{table}
 
-To estimate the dilute CAPE values associated with subsiding motion in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$ is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. 
+To estimate the dilute CAPE values associated with subsiding motion in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$ is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. Ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep tropics decreases monotonically with resolution, consistent with the reduction in convective activity with resolution. 
 
-Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. The ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep tropics decreases monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in dilute CAPE for the entire deep tropics, verified by the similar values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in dilute CAPE for the entire deep tropics, verified by the similar values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
 
 \begin{figure}
 \begin{center}
@@ -204,13 +204,17 @@ Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity 
 \label{fig:profiles}
 \end{figure}
 
-An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through recomputing dilute CAPE using the mean specific humidity of subsiding regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the role of changes in moisture in subsiding regions on the dilute CAPE calculation. Doing the reverse then isolates the role of temperature on dilute CAPE. Figure~\ref{fig:profiles}c shows the influence of moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics, and Figure~\ref{fig:profiles}d the influence of temperature. To first order, the large spread in dilute CAPE between subsiding and ascending regions is due to the difference in moisture in subsiding and ascending regions, while temperature differences between the two regimes has a smaller, second order influence on the spread of dilute CAPE. 
+An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through recomputing dilute CAPE using the mean specific humidity of subsiding regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the role of moisture in subsiding regions on the dilute CAPE calculation. Doing the reverse then isolates the role of temperature in subsiding regions on dilute CAPE. 
 
-This analysis provides the following reasons that subsidence and the activity of the ZM scheme are so tightly intertwined. The negative correlation between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ within the simulations, and determined by the logistic regression, is predominantly due to the effectiveness of drier conditions in depressing dilute CAPE below the threshold for convection. The strong negative correlation between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ across resolutions (Figure~\ref{fig:corr}) is primarily the result of the increase in occurrence of dry, subsiding regions in the deep tropics with resolution.
+Figure~\ref{fig:cape}c shows the influence of moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics, and Figure~\ref{fig:cape}d the influence of temperature. To first order, the large spread in dilute CAPE between subsiding and ascending regions is due to the difference in moisture in subsiding and ascending regions, while temperature differences between the two regimes has a smaller, second order influence on the spread of dilute CAPE. A large spread in dilute CAPE between ascending/descending regions is important for maintaining a strong relationship between subsidence and the activity of the ZM scheme. If the model operated more similar to the fixed moisture experiment (Figure~\ref{fig:cape}d), then subsidence would be associated with larger values of dilute CAPE, and less effective at depressing dilute CAPE below the threshold for convection.
+
+The large spread in dilute CAPE of subsiding/ascending regions multiplied by the large change in space-time fraction of subsiding/ascending are responsible for about half of the change in the dilute CAPE computed from mean temperature and moisture profiles over the entire deep tropics. There is a systematic offset of dilute CAPE values in both subsiding/ascending regions with resolution (Figure~\ref{fig:cape}a) that accounts for another half of the resolution sensitivity. To understand whether moisture or temperature changes with resolution are responsible for this behavior, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then again through fixing the temperature profile to the $ne20 profile$.
+
+%This analysis indicates the following reasons that subsidence and the activity of the ZM scheme are so tightly intertwined. The negative correlation between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ within the simulations, and determined by the logistic regression, is predominantly due to the effectiveness of drier conditions in depressing dilute CAPE below the threshold for convection. The strong negative correlation between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ across resolutions (Figure~\ref{fig:corr}) is primarily the result of the increase in occurrence of dry, subsiding regions in the deep tropics with resolution.
 
 \subsection{Vertical Velocities and Shallow Convective Precipitation}
 
-AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation that is less $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude irrespective of resolution. Focusing in on this drizzle region, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with abundant subsiding motion aloft. 
+AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude irrespective of resolution. Focusing in on this drizzle region, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with abundant subsiding motion aloft. 
 
 In drizzling regions, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. It seems plausible that these two opposing influences on stability translates into small values of dilute CAPE, but still large enough to trigger the ZM scheme. The ZM scheme, properly a deep convection scheme, is operating as a shallow convection scheme in the $10^{\circ}-20^{\circ}$ latitude region, and produces drizzle.
 
@@ -268,7 +272,7 @@ Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band account
 
 \section{Conclusions}
 
-In the $\pm 10^{\circ}$ latitude band, the deep tropics, there is a reduction in the occurrence of ascending grid columns with resolution, which drives an increase in occurrence of subsiding regions. The reduction in occurrence of ascending motion in the deep tropics with resolution likely manifests as a reduction in the area of resolved updrafts with resolution, since the horizontal scale of large buoyancy stratiform clouds collapse to smallest resolvable feature in the model \citep{HR2018JAMES}, i.e., the models effective resolution. The PDF's of vertical velocities indicate that it is this resolution dependence of stratiform clouds that sets a power law relationship of the magnitude of the vertical velocities with resolution $\Delta x^{n}$, with $n=-1$. This scaling also indicates that for a doubling of the resolution, the same upward mass flux can be achieved in the half the area, and so it seems plausible that the reduction in the occurrence of ascending motion with resolution is also a result of the greater efficiency of the resolved mass fluxes with resolution.
+%In the $\pm 10^{\circ}$ latitude band, the deep tropics, there is a reduction in the occurrence of ascending grid columns with resolution, which drives an increase in occurrence of subsiding regions. The reduction in occurrence of ascending motion in the deep tropics with resolution likely manifests as a reduction in the area of resolved updrafts with resolution, since the horizontal scale of large buoyancy stratiform clouds collapse to smallest resolvable feature in the model \citep{HR2018JAMES}, i.e., the models effective resolution. The PDF's of vertical velocities indicate that it is this resolution dependence of stratiform clouds that sets a power law relationship of the magnitude of the vertical velocities with resolution $\Delta x^{n}$, with $n=-1$. This scaling also indicates that for a doubling of the resolution, the same upward mass flux can be achieved in the half the area, and so it seems plausible that the reduction in the occurrence of ascending motion with resolution is also a result of the greater efficiency of the resolved mass fluxes with resolution.
 
 \ack 
 Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study.
