--- a/resolution.tex
+++ b/resolution.tex
@@ -190,7 +190,7 @@ The space-time weights associated with ascending and descending grid columns in 
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape.pdf}\\
 \end{center}
-\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep tropics, (d) Same as (c) but using the mean moisture profile for the entire deep tropics. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
+\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep tropics, (d) Same as (c) but using the mean moisture profile for the entire deep tropics. (e) Same as (c) but using the fixing the temperature to the $ne20$ profiles, and (f) same as (d) but fixing the moisture to the $ne20$ profiles. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
 \label{fig:cape}
 \end{figure}
 
@@ -208,9 +208,7 @@ An experiment is carried out to unravel the contributions of warming and drying 
 
 Figure~\ref{fig:cape}c shows the influence of moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics, and Figure~\ref{fig:cape}d the influence of temperature. To first order, the large spread in dilute CAPE between subsiding and ascending regions is due to the difference in moisture in subsiding and ascending regions, while temperature differences between the two regimes has a smaller, second order influence on the spread of dilute CAPE. A large spread in dilute CAPE between ascending/descending regions is important for maintaining a strong relationship between subsidence and the activity of the ZM scheme. If the model operated more similar to the fixed moisture experiment (Figure~\ref{fig:cape}d), then subsidence would be associated with larger values of dilute CAPE, and less effective at depressing dilute CAPE below the threshold for convection.
 
-The large spread in dilute CAPE of subsiding/ascending regions multiplied by the large change in space-time fraction of subsiding/ascending are responsible for about half of the change in the dilute CAPE computed from mean temperature and moisture profiles over the entire deep tropics. There is a systematic offset of dilute CAPE values in both subsiding/ascending regions with resolution (Figure~\ref{fig:cape}a) that accounts for another half of the resolution sensitivity. To understand whether moisture or temperature changes with resolution are responsible for this behavior, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then again through fixing the temperature profile to the $ne20 profile$.
-
-%This analysis indicates the following reasons that subsidence and the activity of the ZM scheme are so tightly intertwined. The negative correlation between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ within the simulations, and determined by the logistic regression, is predominantly due to the effectiveness of drier conditions in depressing dilute CAPE below the threshold for convection. The strong negative correlation between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ across resolutions (Figure~\ref{fig:corr}) is primarily the result of the increase in occurrence of dry, subsiding regions in the deep tropics with resolution.
+The large spread in dilute CAPE of subsiding/ascending regions multiplied by the large change in space-time fraction of subsiding/ascending are responsible for about half of the change in the dilute CAPE computed from the mean temperature and moisture profiles over the entire deep tropics. There is a systematic offset of dilute CAPE values in both subsiding/ascending regions with resolution (Figure~\ref{fig:cape}a) that accounts for another half of the resolution sensitivity. To understand whether moisture or temperature changes with resolution are responsible for this behavior, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then again through fixing the temperature profile to the $ne20 profile$. Figure~\ref{fig:cape}e,d shows the influence of the change of resolution on moisture, and the change due to temperature, and indicates that temperature changes with resolution are primarily responsible for the other half of the decrease in dilute CAPE in deep tropics with resolution. 
 
 \subsection{Vertical Velocities and Shallow Convective Precipitation}
 
