--- a/resolution.tex
+++ b/resolution.tex
@@ -208,13 +208,13 @@ An experiment is carried out to unravel the contributions of warming and drying 
 
 Figure~\ref{fig:cape}c shows the influence of moisture on the dilute CAPE of subsiding/ascending regions in the deep tropics, and Figure~\ref{fig:cape}d the influence of temperature. To first order, the large spread in dilute CAPE between subsiding and ascending regions is due to the difference in moisture in subsiding and ascending regions, while temperature differences between the two regimes has a smaller, second order influence on the spread of dilute CAPE. A large spread in dilute CAPE between ascending/descending regions is important for maintaining a strong relationship between subsidence and the activity of the ZM scheme. If the model operated more similar to the fixed moisture experiment (Figure~\ref{fig:cape}d), then subsidence would be associated with larger values of dilute CAPE, and less effective at depressing dilute CAPE below the threshold for convection.
 
-The large spread in dilute CAPE of subsiding/ascending regions multiplied by the large change in space-time fraction of subsiding/ascending are responsible for about half of the change in the dilute CAPE computed from the mean temperature and moisture profiles over the entire deep tropics. There is a systematic offset of dilute CAPE values in both subsiding/ascending regions with resolution (Figure~\ref{fig:cape}a) that accounts for another half of the resolution sensitivity. To understand whether moisture or temperature changes with resolution are responsible for this behavior, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then again through fixing the temperature profile to the $ne20 profile$. Figure~\ref{fig:cape}e,d shows the influence of the change of resolution on moisture, and the change due to temperature, and indicates that temperature changes with resolution are primarily responsible for the other half of the decrease in dilute CAPE in deep tropics with resolution. 
+The large spread in dilute CAPE of subsiding/ascending regions combined with the large changes in space-time fraction of subsiding/ascending with resolution are responsible for about half of the change in the dilute CAPE computed for the entire deep tropics. There is also a systematic offset of dilute CAPE values in both subsiding/ascending regions with resolution (Figure~\ref{fig:cape}a) that accounts for another half of the resolution sensitivity. To understand whether moisture or temperature changes with resolution are responsible for this behavior, a similar experiment is performed in which dilute CAPE is recomputed at all resolutions, but fixing the moisture profiles to the lowest resolution $ne20$ profile, and then repeated through fixing only the temperature profile to $ne20$ values. Figure~\ref{fig:cape}e,d shows the influence of the change of resolution on moisture, and the change due to temperature, respectively. The calculation shows that temperature changes with resolution are primarily responsible for the other half of the decrease in dilute CAPE in the deep tropics with resolution. 
 
 \subsection{Vertical Velocities and Shallow Convective Precipitation}
 
-AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude irrespective of resolution. Focusing in on this drizzle region, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with abundant subsiding motion aloft. 
+AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the region between $10^{\circ}-20^{\circ}$ latitude irrespective of resolution. Focusing in on this drizzle region, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with subsiding motion aloft. 
 
-In drizzling regions, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. It seems plausible that these two opposing influences on stability translates into small values of dilute CAPE, but still large enough to trigger the ZM scheme. The ZM scheme, properly a deep convection scheme, is operating as a shallow convection scheme in the $10^{\circ}-20^{\circ}$ latitude region, and produces drizzle.
+In drizzling regions, there are opposing influences on dilute CAPE, a global maximum in latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. It seems plausible that these two opposing influences on stability translates into small values of dilute CAPE, but for drizzle to occur, still large enough to trigger the ZM scheme. The ZM scheme, properly a deep convection scheme, is operating as a shallow convection scheme in the $10^{\circ}-20^{\circ}$ latitude region.
 
 \begin{figure}
 \begin{center}
@@ -224,7 +224,7 @@ In drizzling regions, there are opposing influences on dilute CAPE, a global max
 \label{fig:transect}
 \end{figure}
 
-Figure~\ref{fig:cape-subt} shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right)$ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and the dilute CAPE computed from the mean temperature and moisture over the entire subtropics varies much less with resolution compared with the deep tropics ($\sim 20$ J/kg across all resolutions, compared with $\sim 80$ J/kg across resolutions in the deep tropics). Also unlike the deep tropics, the reduction in dilute CAPE with resolution is not from an increase in occurrence of subsiding grid columns, since the space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b). The decline in dilute CAPE with resolution in the subtropics is a result of a greater magnitude of downward motion (not shown), but this sensitivity is not sufficient to suppress the occurrence of drizzling in the subtropics.
+Figure~\ref{fig:cape-subt} shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right)$ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and the dilute CAPE computed from the mean temperature and moisture over the entire subtropics varies much less with resolution compared with the deep tropics ($\sim 20$ J/kg across all resolutions, compared with $\sim 80$ J/kg across resolutions in the deep tropics). Also unlike the deep tropics, the reduction in dilute CAPE with resolution is not from an increase in occurrence of subsiding grid columns, since the space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b). The decline in dilute CAPE with resolution in the subtropics is a result of increased stability due to changes in environmental temperature from the larger magnitude downward motion (not shown), but this sensitivity is not sufficient to suppress the occurrence of drizzling in the subtropics.
 
 \begin{figure}
 \begin{center}
@@ -258,7 +258,7 @@ The increase in stratiform precipitation rates with resolution is likely due to 
 \end{equation}
 after \cite{TETAL2018CD}, and the subscript $850$ is dropped from $\omega$ and $q$ for brevity. 
 
-Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so $\overline{R_s}$ is defined as the mean over the $\pm 15^{\circ}$ latitude region. Figure~\ref{fig:pdecomp} is a plot of the terms $M_s \left( \omega_i , q_j \right)$ and $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ for all resolutions, in the $\pm 15^{\circ}$ latitude region. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f_s \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. The $M_s$ plots show that larger magnitude $\omega_{850}$ correspond to larger magnitude time-mean stratiform precipitation rates, and these larger precipitation rates are associated with larger spatial frequencies $f_s \left( \omega_i , q_j \right)$ at higher resolutions. These large magnitude stratiform precipitation rates increasingly contribute to the increase in $\overline{R_{s}}$ with resolution, as seen by the expansion of $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ to include larger magnitude $\omega_{850}$. Changes to the time mean spatial frequency of the $q_{850}$ field contributes comparatively much less to changes in stratiform precipitation.
+Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so $\overline{R_s}$ is defined as the mean over the $\pm 15^{\circ}$ latitude region. Figure~\ref{fig:pdecomp} is a plot of the terms $M_s \left( \omega_i , q_j \right)$ and $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ for all resolutions,. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f_s \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. The $M_s$ plots show that larger magnitude $\omega_{850}$ correspond to larger magnitude time-mean stratiform precipitation rates, and these larger precipitation rates are associated with larger spatial frequencies $f_s \left( \omega_i , q_j \right)$ at higher resolutions. These large magnitude stratiform precipitation rates increasingly contribute to the increase in $\overline{R_{s}}$ with resolution, as seen by the expansion of $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ to include larger magnitude $\omega_{850}$. Changes to the time mean spatial frequency of the $q_{850}$ field contributes comparatively much less to changes in stratiform precipitation.
 
 \begin{figure}
 \begin{center}
