--- a/resolution.tex
+++ b/resolution.tex
@@ -190,7 +190,7 @@ The space-time weights associated with ascending and descending grid columns in 
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape.pdf}\\
 \end{center}
-\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep tropics, (d) Same as (c) but using the mean moisture profile for the entire deep tropics. (e) Same as (c) but using the fixing the temperature to the $ne20$ profiles, and (f) same as (d) but fixing the moisture to the $ne20$ profiles. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
+\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep tropics, (d) Same as (c) but using the mean moisture profile for the entire deep tropics. (e) Same as (c) but fixing temperature to the $ne20$ profiles, and (f) same as (d) but fixing moisture to the $ne20$ profile. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
 \label{fig:cape}
 \end{figure}
 
