--- a/resolution.tex
+++ b/resolution.tex
@@ -260,7 +260,7 @@ The increase in stratiform precipitation rates with resolution is likely due to 
 \end{equation}
 after \cite{TETAL2018CD}, and the subscript $850$ is dropped from $\omega$ and $q$ for brevity. 
 
-Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so $\overline{R_s}$ is defined as the mean over the $\pm 15^{\circ}$ latitude region. Figure~\ref{fig:pdecomp} is a plot of the terms $M_s \left( \omega_i , q_j \right)$ and $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ for all resolutions,. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f_s \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. The $M_s$ plots show that larger magnitude $\omega_{850}$ correspond to larger magnitude time-mean stratiform precipitation rates, and these larger precipitation rates are associated with larger spatial frequencies $f_s \left( \omega_i , q_j \right)$ at higher resolutions. These large magnitude stratiform precipitation rates increasingly contribute to the increase in $\overline{R_{s}}$ with resolution, as seen by the expansion of $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ to include larger magnitude $\omega_{850}$. Changes to the time mean spatial frequency of the $q_{850}$ field contributes comparatively much less to changes in stratiform precipitation.
+Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so $\overline{R_s}$ is defined as the mean over the $\pm 15^{\circ}$ latitude region. Figure~\ref{fig:pdecomp} is a plot of the terms $M_s \left( \omega_i , q_j \right)$ and $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ for all resolutions,. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f_s \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. The $M_s$ plots show that larger magnitude $\omega_{850}$ correspond to larger magnitude time-mean stratiform precipitation rates, and these larger precipitation rates are associated with larger spatial frequencies $f_s \left( \omega_i , q_j \right)$ at higher resolutions. These large magnitude stratiform precipitation rates increasingly contribute to the increase in $\overline{R_{s}}$ with resolution, as seen by the increase in $f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right)$ in the larger magnitude $\omega_{850}$ space with resolution. Changes to the time mean spatial frequency of the $q_{850}$ field contributes comparatively much less to changes in stratiform precipitation.
 
 \begin{figure}
 \begin{center}
